@@ -392,6 +392,9 @@
       
       \item \code{pmin} and \code{pmax} now warn if an argument is
       partially recycled (wish of \PR{14638}).
+
+      \item The default for \code{image(useRaster=)} is now taken from
+      option \code{"preferRastrs"}: for the small print see \code{?image}.
     }
   }
 
